--- a/index.html
+++ b/index.html
@@ -2,19 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Setting Font Size</title>
+<title>The Box Model</title>
 <style>
-body{
-  font-size: 120%;
+
+body {
+  background-color: blue;
 }
+
+#box {
+  background-color: blue;
+  padding: 10px 20px 10px 20px;
+  margin: 40px;
+  border: 5px solid black;
+}
+#content {
+  background-color: #90EE90; /*green*/
+}
+
+h1 {
+  margin-bottom: 30px;
+}
+
 </style>
 </head>
 <body>
-<div>Regular text</div>
-<div>2em text
-  <div>4em text
-    <div>2em again!</div>
-  </div>
+
+<h1>Box Model</h1>
+
+<div id="box">
+  <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </div>
 </div>
+
+
 </body>
 </html>
+
