--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>Sinchiguano's China Bistro</h1></a>
+            <a href="index.html"><h1>Sinchiguano's China Food</h1></a>
             <p>
               <img src="images/one.png" alt="Kosher certification">
               <span>Kosher Certified</span>
@@ -37,7 +37,7 @@
 
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
+            <li class="visible-xs">
               <a href="menu.html">
                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
             </li>
